--- a/source/css/skeleton.css
+++ b/source/css/skeleton.css
@@ -215,8 +215,8 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 1.5rem;
-  font-family: "DM Serif Display", serif;
-  font-weight: 400;
+  font-family: "Inter", serif;
+  font-weight: bold;
 }
 
 h1 {
