--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -1,41 +1,31 @@
 /* dm-serif-display-regular - latin */
 @font-face {
-  font-family: "DM Serif Display";
+  font-family: 'DM Serif Display';
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/dm-serif-display-v4-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local("DM Serif Display Regular"), local("DMSerifDisplay-Regular"),
-    url("../fonts/dm-serif-display-v4-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/dm-serif-display-v4-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("../fonts/dm-serif-display-v4-latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("../fonts/dm-serif-display-v4-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("../fonts/dm-serif-display-v4-latin-regular.svg#DMSerifDisplay")
-      format("svg"); /* Legacy iOS */
+  src: url('../fonts/dm-serif-display-v4-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('DM Serif Display Regular'), local('DMSerifDisplay-Regular'),
+       url('../fonts/dm-serif-display-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/dm-serif-display-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/dm-serif-display-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/dm-serif-display-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/dm-serif-display-v4-latin-regular.svg#DMSerifDisplay') format('svg'); /* Legacy iOS */
 
   font-display: swap; /* Add font-display */
 }
 
 /* inter-regular - latin */
 @font-face {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/inter-v2-latin-regular.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("../fonts/inter-v2-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../fonts/inter-v2-latin-regular.woff2") format("woff2"),
-    /* Super Modern Browsers */ url("../fonts/inter-v2-latin-regular.woff")
-      format("woff"),
-    /* Modern Browsers */ url("../fonts/inter-v2-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */ url("../fonts/inter-v2-latin-regular.svg#Inter")
-      format("svg"); /* Legacy iOS */
+  src: url('../fonts/inter-v2-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../fonts/inter-v2-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/inter-v2-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/inter-v2-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/inter-v2-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/inter-v2-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
 
   font-display: swap; /* Add font-display */
 }
@@ -153,11 +143,11 @@ img {
   display: block;
   cursor: pointer;
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
@@ -179,8 +169,6 @@ img {
   border-radius: 50%;
 }
 
-/* To highlight `` syntax (by alee 2022.03.21) */
-/* ------------------------------------ */
 code:not(pre code) {
   background-color: rgb(230, 230, 230);
   border-radius: 5px;
@@ -191,30 +179,18 @@ code:not(pre code) {
 body.darkmode code:not(pre code) {
   background-color: rgb(65, 65, 65);
 }
-/* ------------------------------------ */
-
-li p code {
-  background-color: rgb(230, 230, 230);
-  border-radius: 5px;
-  padding: 0px 2px;
-  font-size: 85%;
-}
-
-body.darkmode li p code {
-  background-color: rgb(65, 65, 65);
-}
 
 /* blockquote */
 blockquote {
-  font-family: "Inter";
-  background-color: rgba(148, 148, 149, 0.08);
+  font-family: 'Inter';
+  background-color: rgba(148, 148, 149, 0.08) ;
   margin: 1.5em 0px;
   padding: 1.1em 20px 1px 20px;
   font-style: italic;
 }
 
 blockquote footer {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-size: 16px;
   padding-bottom: 10px;
   margin-top: -10px;
@@ -249,11 +225,12 @@ a.footer-link:focus {
 }
 
 .svg-hov {
-  transition: all 0.2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 .svg-hov:hover {
   transform: translateY(-3px);
-  transition: all 0.2s ease-in-out;
+  transition: all .2s ease-in-out;
+
 }
 
 .hexo {
@@ -263,16 +240,16 @@ a.footer-link:focus {
 }
 
 .github {
-  fill: #63636f;
+  fill: #63636F;
 }
 .linkedin {
   fill: #0073b1;
 }
 .twitter {
-  fill: #1da1f2;
+  fill: #1DA1F2;
 }
 .instagram {
-  fill: #e4405f;
+  fill: #E4405F
 }
 .stackoverflow {
   fill: #ca7516;
@@ -342,4 +319,5 @@ body.darkmode {
   #madewith {
     text-align: left;
   }
+
 }
