change blockquote color

--- a/layout/partial/tcolor.ejs
+++ b/layout/partial/tcolor.ejs
@@ -8,7 +8,7 @@
     );
   }
   blockquote {
-    border-left: 8px solid #<%= theme.tcolor %>;
+    border-left: 8px solid #0ba484;
   }
   .nanobar .bar {
     background: #<%= theme.tcolor %>;
