--- a/layout/partial/header.ejs
+++ b/layout/partial/header.ejs
@@ -44,6 +44,7 @@
     <div class="row">
       <div class="nine columns left">
         <a href="<%= config.root %>">Home</a>
+        <a href="/archives" class="ml">Post</a>
         <% for (name in theme.menu) { %>
           <% if (theme.menu[name]) { %>
           <a href="<%- url_for(theme.menu[name]) %>" class="ml"><%- name %></a>
