--- a/layout/partial/header.ejs
+++ b/layout/partial/header.ejs
@@ -44,17 +44,10 @@
     <div class="row">
       <div class="nine columns left">
         <a href="<%= config.root %>">Home</a>
-        <a href="/archives" class="ml">Post</a>
+        <a href="/archives" class="ml">Posts</a>
         <% for (name in theme.menu) { %>
           <% if (theme.menu[name]) { %>
           <a href="<%- url_for(theme.menu[name]) %>" class="ml"><%- name %></a>
-          <% } %>
-        <% } %>
-        <% if (theme.email) { %>
-          <% if (typeof obfuscate === "function") { %>
-            <a href="mailto:<%- obfuscate(theme.email) %>" target="_blank" class="ml">Email</a>
-          <% } else { %>
-            <a href="mailto:<%= theme.email %>" target="_blank" class="ml">Email</a>
           <% } %>
         <% } %>
       </div>
