--- a/layout/partial/header.ejs
+++ b/layout/partial/header.ejs
@@ -42,7 +42,7 @@
 
   <div class="twelve columns">
     <div class="row">
-      <div class="nine columns left">
+      <div class="nine columns left" id="main-content">
         <a href="<%= config.root %>">Home</a>
         <a href="/archives" class="ml">Posts</a>
         <% for (name in theme.menu) { %>
